--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@main
         with:
           version: 'latest'
-          project_id: ${{ secrets.myassignment-426912 }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
 
       - name: Configure Docker to use gcloud as a credential helper
@@ -24,16 +24,16 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t gcr.io/${{ secrets.myassignment-426912}}/myassignment:$GITHUB_SHA
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID}}/myassignment:$GITHUB_SHA
 
       - name: Push Docker image
         run: |
-          docker push gcr.io/${{ secrets.myassignment}}/myassignment:$GITHUB_SHA
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID}}/myassignment:$GITHUB_SHA
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy DI-PY-api \
-            --image gcr.io/${{ secrets.myassignment}}/myassignment:$GITHUB_SHA \
+          gcloud run deploy myassignment \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID}}/myassignment:$GITHUB_SHA \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --allow-unauthenticated
