--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -38,4 +38,4 @@ jobs:
             --region ${{ secrets.GCP_REGION }} \
             --allow-unauthenticated
 options:
-  logging: NONE
+logging: CLOUD_LOGGING_ONLY
