--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -1,5 +1,7 @@
 steps:
-  # Docker Build
+options: 
+    logging: NONE
+  # Docker Build
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 
            'us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image', 
