--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -8,14 +8,17 @@ steps:
     args: ['push', 
            'us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image']
 
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: 'gcloud'
-    timeout: 240s
-    args: ['compute', 'instances', 
-           'create-with-container', ‘assignment,
-           '--container-image', 
-           'us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image']
-    env:
-      - 'CLOUDSDK_COMPUTE_REGION=us-central1'
-      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: 'gcloud'
+  timeout: '240s'
+  args:
+    - 'compute'
+    - 'instances'
+    - 'create-with-container'
+    - 'assignment'
+    - '--container-image'
+    - 'us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image'
+  env:
+    - 'CLOUDSDK_COMPUTE_REGION=us-central1'
+    - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
 
