--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -13,21 +13,28 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build Docker image
-        uses: 'docker://gcr.io/cloud-builders/docker'
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
         with:
-          args: build -t us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image .
+          version: 'latest'
+          project_id: 'myassignment-426912'
+          service_account_key: ${{ secrets.GCP_SA_KEY }} # Store your service account key as a secret in GitHub
+
+      - name: Authenticate Docker with Google Cloud
+        run: |
+          gcloud auth configure-docker us-central1-docker.pkg.dev
+
+      - name: Build Docker image
+        run: |
+          docker build -t us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image .
 
       - name: Push Docker image
-        uses: 'docker://gcr.io/cloud-builders/docker'
-        with:
-          args: push us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image
+        run: |
+          docker push us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image
 
       - name: Deploy to Google Cloud
-        uses: 'docker://gcr.io/google.com/cloudsdktool/cloud-sdk'
-        with:
-          entrypoint: gcloud
-          args: compute instances create-with-container assignment --container-image us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image
+        run: |
+          gcloud compute instances create-with-container assignment --container-image us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image
         env:
           CLOUDSDK_COMPUTE_REGION: us-central1
           CLOUDSDK_COMPUTE_ZONE: us-central1-a
