--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
+          version: 'latest'
           project_id: 'myassignment-426912'
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
