--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -31,9 +31,10 @@ jobs:
         run: |
           gcloud auth configure-docker us-central1-docker.pkg.dev
 
-      - name: Build Docker image
+      - name: Build and Push Docker image
         run: |
-          docker build -t us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image:$GITHUB_SHA \
+          docker buildx build \
+            -t us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image:$GITHUB_SHA \
             --build-arg GCP_SA_KEY="${{ secrets.GCP_SA_KEY }}" \
             .
 
