--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -35,7 +35,7 @@ jobs:
         run: |
           docker buildx build \
             -t us-central1-docker.pkg.dev/myassignment-426912/cloud-run-source-deploy/image:$GITHUB_SHA \
-            --build-arg stringArray GCP_SA="${{ secrets.GCP_SA_KEY }}" \
+            --secret stringArray id=GCP_SA,src="${{ secrets.GCP_SA_KEY }}" \
             .
 
       - name: Push Docker image
